[package]
name = "aanb"
version = "0.0.1"
authors = ["aaelony"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.1", features = ["fullstack"] }
## nbcat = "0.2.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
